--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "okendo2",
+  "name": "okendo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,6 +11,7 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
+    "react-select": "^3.0.8",
     "styled-components": "^4.4.1",
     "typescript": "3.6.4"
   },
