--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/node": "12.12.3",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.3",
+    "@types/react-select": "^3.0.8",
     "@types/styled-components": "^4.1.20",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
